--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,11 +1,16 @@
-<div class="container">
-  <ul class="post-list">
-    {{#each posts as |post|}}
-    <li>
-      <div class="panel panel-info">
-        {{> post-info post }}
-      </div>
-    </li>
-    {{/each}}
-  </ul>
+<h4 class="text-center m-5">Current Posts</h4>
+{{#each posts as |post| }}
+<div class="row mb-4 post">
+  <div class="col-md-5">
+    <h2>
+      <a href="/post/{{post.id}}">{{post.title}}</a>
+    </h2>
+    <p>Posted by {{post.user.username}} on {{format_date post.date_created}}</p>
+  </div>
+  <div class="col-md-7 block">
+    <p class="content">
+      {{post.content}}
+    </p>
+  </div>
 </div>
+{{/each}}
