adding assets folder

--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,14 +1,14 @@
-<h4 class="text-center m-5">Current Posts</h4>
+<h4>Latest Posts</h4>
 {{#each posts as |post| }}
-<div class="row mb-4 post">
-  <div class="col-md-5">
+<div>
+  <div>
     <h2>
       <a href="/post/{{post.id}}">{{post.title}}</a>
     </h2>
     <p>Posted by {{post.user.username}} on {{format_date post.date_created}}</p>
   </div>
-  <div class="col-md-7 block">
-    <p class="content">
+  <div>
+    <p>
       {{post.content}}
     </p>
   </div>
