--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -3,25 +3,46 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
   <title>The Tech Review - Blog</title>
   <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
   <header>
-    <nav>
-      <div class="nav" id="mainLogo"><a href="#">Tech Review</a></div>
-      <ul class="nav navbar-main">
-        <li><a href="/">Home</a></li>
-        <li><a href="#">Dashboard</a></li>
+    <nav class="navbar navbar-default">
+      <div class="container-fluid">
+      <div class="navbar-header" id="mainLogo" ><a href="/"><h1>Tech Review</h1></a></div>
+      <ul class="nav navbar-nav">
+        <li class="nav-item"><a class="nav-link" href="/">Home</a></li>
+        {{#if logged_in}}
+        <li class="nav-item"><a class="nav-link" href="/dashboard">Dashboard</a></li>
+        {{else}}
+          <li class="nav-item"><a class="nav-link" href="/login">Dashboard</a></li>
+          {{/if}}
         </ul>
-        <ul class="nav introNavbar">
-          <li><a href="/login">Sign In</a></li>
-          <li><a href="#">Log out</a></li>
+        <ul class="nav navbar-nav navbar-right">
+          {{#if logged_in}}
+          <li class="logout">
+            <button type="submit" class="logout-btn">
+              <span class="glyphicon glyphicon-log-in"></span>
+              Log out
+            </button>
+          </li>
+          {{else}}
+          <li><a href="/login"><span class="glyphicon glyphicon-user"></span> Sign In</a></li>
+          {{/if}}
         </ul>
+        </div>
     </nav>
   </header>
 
   {{{body}}}
+
+   {{#if logged_in}}
+  <script src="/js/logout.js"></script>
+  {{/if}}
   
 </body>
 </html>
