--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,11 +1,25 @@
-<form class="login-form">
-  <div>
-    <label for="userName">User Name:</label>
-    <input type="text" class="form-control login-user" id="userName">
-    </div>
-    <div class="form-group">
-        <label for="pwd">Password:</label>
-        <input type="password" class="form-control login-pwd" id="pwd">
-    </div>
-    <button type="submit" class="btn btn-default login-btn">Submit</button>
-</form>
+<div class="col-md-4 col-md-offset-4">
+  <div class="well">
+    <h2>Sign In</h2>
+    <form class="form login-form">
+      <div class="form-group">
+        <label for="email-login">Email:</label>
+        <input type="text" class="form-control" id="email-login" placeholder="Your Email *" />
+      </div>
+      <div class="form-group">
+        <label for="password-login">Password:</label>
+        <input type="password" class="form-control" id="password-login" placeholder="Your Password *" />
+      </div>
+      <div class="form-group">
+        <input type="submit" class="btnSubmit btn btn-default login-btn" value="Sign In" />
+      </div>
+      <br>
+      <div class="form-group">
+        <a href="/signup" id="submit" class="btn">Don't have an account? Sign up instead!</a>
+      </div>
+
+    </form>
+  </div>
+</div>
+
+<script src="/js/login.js"></script>
