--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -1,21 +1,23 @@
-<div>
-    <div>
-        <h3>Sign Up</h3>
-        <form id="signup-form">
-            <div >
-                <label for="user-signup"></label>
+<div class="col-md-4 col-md-offset-4">
+    <div class="well">
+        <h2>Sign Up</h2>
+        <form class="signup-form">
+            <div class="form-group">
+                <label for="user-signup">User Name:</label>
                 <input type="text" class="form-control" id="user-signup" placeholder="Your Username *" />
             </div>
-            <div>
+            <div class="form-group">
+                <label for="pwd-signup">Password:</label>
                 <input type="password" class="form-control" id="pwd-signup"
                     placeholder="Your Password (minimum 8 characters) *" />
             </div>
-            <div>
-                <input type="submit" class="btnSubmit" value="Create Account" />
+            <div class="form-group">
+                <input type="submit" class="btnSubmit btn btn-default btnSubmit" value="Create Account" />
             </div>
-            <div>
+            <div class="form-group">
                 <a href="/login" id="submit" class="btn">Already have an account? Click here to log in!</a>
             </div>
         </form>
     </div>
 </div>
+<script src="/js/signup.js"></script>
