--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -3,15 +3,15 @@
     <h2>Sign In</h2>
     <form class="form login-form">
       <div class="form-group">
-        <label for="email-login">Email:</label>
-        <input type="text" class="form-control" id="email-login" placeholder="Your Email *" />
+        <label for="email-login">email:</label>
+        <input class="form-control" type="text" id="email-login" placeholder="Your Email *" />
       </div>
       <div class="form-group">
-        <label for="password-login">Password:</label>
+        <label for="password-login">password:</label>
         <input type="password" class="form-control" id="password-login" placeholder="Your Password *" />
       </div>
       <div class="form-group">
-        <input type="submit" class="btnSubmit btn btn-default login-btn" value="Sign In" />
+        <button class="btnSubmit btn btn-default login-btn" type="submit"> Sign In</button>
       </div>
       <br>
       <div class="form-group">
