still debugging with ASKBCS

--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -3,12 +3,16 @@
         <h2>Sign Up</h2>
         <form class="signup-form">
             <div class="form-group">
-                <label for="user-signup">User Name:</label>
+                <label for="user-signup">username:</label>
                 <input type="text" class="form-control" id="user-signup" placeholder="Your Username *" />
             </div>
             <div class="form-group">
-                <label for="pwd-signup">Password:</label>
-                <input type="password" class="form-control" id="pwd-signup"
+                <label for="email-signup">email:</label>
+                <input class="form-control" type="text" id="email-signup" />
+            </div>
+            <div class="form-group">
+                <label for="password-signup">password:</label>
+                <input type="password" class="form-control" id="password-signup"
                     placeholder="Your Password (minimum 8 characters) *" />
             </div>
             <div class="form-group">
