--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,40 +10,43 @@
   <title>The Tech Review - Blog</title>
   <link rel="stylesheet" href="/css/style.css">
 </head>
+
 <body>
   <header>
     <nav class="navbar navbar-default">
       <div class="container-fluid">
-      <div class="navbar-header" id="mainLogo" ><a href="/"><h1>Tech Review</h1></a></div>
-      <ul class="nav navbar-nav">
-        <li class="nav-item"><a class="nav-link" href="/">Home</a></li>
-        {{#if logged_in}}
-        <li class="nav-item"><a class="nav-link" href="/dashboard">Dashboard</a></li>
-        {{else}}
+        <div class="navbar-header" id="mainLogo"><a href="/">
+            <h1>Tech Review</h1>
+          </a></div>
+        <ul class="nav navbar-nav">
+          <li class="nav-item"><a class="nav-link" href="/">Home</a></li>
+          {{#if logged_in}}
+          <li class="nav-item"><a class="nav-link" href="/dashboard">Dashboard</a></li>
+          {{else}}
           <li class="nav-item"><a class="nav-link" href="/login">Dashboard</a></li>
           {{/if}}
         </ul>
         <ul class="nav navbar-nav navbar-right">
           {{#if logged_in}}
           <li class="logout">
-            <button type="submit" class="logout-btn">
-              <span class="glyphicon glyphicon-log-in"></span>
-              Log out
-            </button>
+            <form action="/logout" method="POST">
+              <button type="submit" class="logout-btn" id="logout">Logout</button>
+            </form>
           </li>
           {{else}}
           <li><a href="/login"><span class="glyphicon glyphicon-user"></span> Sign In</a></li>
           {{/if}}
         </ul>
-        </div>
+      </div>
     </nav>
   </header>
 
   {{{body}}}
 
-   {{#if logged_in}}
+  {{#if logged_in}}
   <script src="/js/logout.js"></script>
   {{/if}}
-  
+
 </body>
+
 </html>
