--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -21,27 +21,40 @@
         <ul class="nav navbar-nav">
           <li class="nav-item"><a class="nav-link" href="/">Home</a></li>
           {{#if logged_in}}
-          <li class="nav-item"><a class="nav-link" href="/dashboard">Dashboard</a></li>
+          <li class="nav-item">
+            <a class="nav-link" href="/dashboard">Dashboard</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link"><button class="link-secondary no-button" id="logout">Logout</button></a>
+          </li>
           {{else}}
-          <li class="nav-item"><a class="nav-link" href="/login">Dashboard</a></li>
+          <li class="nav-item">
+            <a class="nav-link" href="/login">Dashboard</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/login">Login</a>
+          </li>
           {{/if}}
         </ul>
-        <ul class="nav navbar-nav navbar-right">
-          {{#if logged_in}}
-          <li class="logout">
+        {{!-- <ul class="nav navbar-nav navbar-right">
+          {{#if logged_in}} --}}
+          {{!-- <li class="logout">
             <form action="/logout" method="POST">
               <button type="submit" class="logout-btn" id="logout">Logout</button>
             </form>
-          </li>
-          {{else}}
+          </li> --}}
+          {{!-- {{else}}
           <li><a href="/login"><span class="glyphicon glyphicon-user"></span> Sign In</a></li>
           {{/if}}
-        </ul>
+        </ul> --}}
       </div>
     </nav>
   </header>
+  <main class="container px-4">
 
-  {{{body}}}
+    {{{body}}}
+
+  </main>
 
   {{#if logged_in}}
   <script src="/js/logout.js"></script>
