--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,5 +1,16 @@
-ul {
-  list-style-type: none;
+h1 {
+  font-size: 2em;
+  text-align: center;
 }
 
-;
+nav {
+  font-size: 1.5em;
+}
+
+ul,
+li {
+  list-style-type: none;
+  display: inline;
+  margin: 0;
+  padding: 0;
+}
