--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,7 +1,14 @@
+@import url('https://fonts.googleapis.com/css2?family=Overpass:wght@200;400;900&display=swap');
+/*font-family: 'Overpass', sans-serif;*/
+
 nav {
   font-size: 1.5em;
   display: flex;
   justify-content: space-between;
+  padding: 1.25%;
+  background-color: whitesmoke;
+  border-bottom: 8px groove lightseagreen;
+  margin-bottom: 2%;
 }
 
 nav ul {
@@ -9,6 +16,17 @@ nav ul {
   max-width: 50%;
   display: flex;
   justify-content: space-evenly;
+}
+
+#logo {
+  font-family: 'Overpass', sans-serif;
+  font-weight: 900;
+  font-size: 1.52em;
+  color: #105e59;
+}
+
+#logo:hover {
+  text-decoration: none;
 }
 
 #logout {
