--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -25,19 +25,19 @@
         <li>
           <a href="/dashboard">Dashboard</a>
         </li>
-        <li>
+        <li class="nav-item">
           <a><button class="no-button" id="logout">Logout</button></a>
         </li>
         {{else}}
-        <li>
+        <li class="nav-item">
           <a href="/login">Dashboard</a>
         </li>
-        <li>
+        <li class="nav-item">
           <a href="/login">Login</a>
         </li>
         {{/if}}
       </ul>
-      <a href="/signup">Sign Up</a>
+      <a href="/signup" class="nav-item">Sign Up</a>
     </nav>
   </header>
   <main class="container px-4">
